# gvsu-coursework

./: .gitignore  CMakeLists.txt  JLSerror  Makefile  README.md  finance.sql  hosts  index.html  index.php  k-queens  kqueens.c  main.cpp  muliplier.jls~  multiplier.jls~  school-population-breakdown  testALU2_16bit~
CISLABS/: 0PYTHON-SETUP.docx  Project1(2).cpp  pcapexample(2).cpp  tcpServer.java
CISLABS/Lab2/: Deliverables.docx  javaserverexample
CISLABS/Lab4/: https_--www.dro.txt
CISLABS/Project6/: CS457Final.rtf  README.txt  README.txt.docx
JLSProject_2/: IALUOp.jls  RALUOp.jls
JLSProject_2/SingleCycleCPU/: ControlPrototype.jls  PHSingleCycleCPU.jls
bib/: paper.bib
cis343/: README.md
cis343/finalProject/: test
cis343/homework/: hw#5.lisp
cis343/project1/: colour.h  connect
cis343/project2/: scanner  scanner.c
cis343/project3/: driver  infix2postfix.c  stack.c
cis452/: README.md
cis452/lab11/: a  (+5 more)
cis458/: README.md
cis467/: README.md
cis616/: README.md
cis678/decisiontree/: CMakeLists.txt  README.md  dt_config.hpp.in
cis678/decisiontree/src/: main.cpp
cis678/decisiontree/src/DT/: dt.cpp  dt.hpp
cis678/decisiontree/src/Func/: func.hpp
cis678/decisiontree/src/Parse/: parse.hpp
cis678/flesch_index/: .gitignore  CMakeLists.txt  README.md
cis678/flesch_index/include/: flesch-index.hpp  flesch-index_config.h.in
cis678/flesch_index/results/: RESULTS.md
cis678/flesch_index/src/: flesch-index.cxx  main.cxx
cmake/: FindMySQL++.cmake
controller/: IndexController.php
cs/: 3.docx  5.odt
css/: prism.css  styles.css
data/: creditCard-mod.csv  portfolio-2.csv  portfolio-mod.csv  portfolio.csv
docs/: HW.docx
examples/: d3_basic_line.html  d3_data_mod.html  d3_load.html
finalProject/: FinalProject.hs
headers/: DBConnetionManager.h  Person.h  School.h  Sim.h  Tuberculosis.h  infection.h  person.h  school.h  tuberculosis.h
hw/: .gitignore  3.odt  4.odt
js/: prism.js
lab1/: a.out  sp3.c  sp4.c
lab10/: part1TypeScript  part2  sp2.c
lab11/: sp1a.c  typescript
lab13/: sp1.c
lab2/: clearTextFile.txt  simpleShell.c  typescript
lab3/: a.out  lpa.c  lpaEC.c  sp2.c
lab4/: lpa.c  sp2.c  typescript
lab5/: .gdpOut.swp  a.out  reader2.c  sp1.c  writer.c  writeshm.c
lab6/: ec.c  sp1.c  test2.c  typescript
lab7/: .gitignore  a.out  p19.s  problem_specs.c
lab8/: .nfs000000000408072d00000627  map  map.c  script
lab9/: sp1.c
pages/: overview_d3_data_mod.html  overview_d3_loading.html  overview_eos.html  overview_html.html  overview_js.html
project1/: a.out  color.c  color_example.c  connect.c  myTerminal.c
project2/: input-sample1.txt  input-sample2.txt  input-sample3.txt  output  output-sample1.txt  spms2.c
project3/: input.data  stacktest.c  test  testdata.txt
project4/: InfixPostfix.rb
project5/: SimpleDate.rb  Trie.java
project6/: Project6.lsp  TestClient.py
rp/: clean.sh  paper.tex
src/: DBConnectionManager.cpp  Person.cpp  School.cpp  Sim.cpp  Tuberculosis.cpp  main.cpp  person.cpp
utils/: Router.php
view/: dCredit.php  header.php  load.php  sCredit.php  test.php
(+236 files in other folders)
